# ActorHarbor-Lab

./: .gitignore  LICENSE  README.md  pyproject.toml  run-local-saas-lab.bat  run_acceptance_surface_matrix.py  run_lab.py  run_notification_audit.py  run_scenario.py
data/: app_config.json  presets.json  profiles.json  projects.json  scenarios.json  selector_maps.json
docs/: ADAPTER_CONTRACT.md  ADAPTER_MODEL.md  AI_ADAPTER_AUTHORING.md  ARCHITECTURE.md  ARTIFACTS_AND_EVIDENCE.md  DEVELOPMENT.md  GETTING_STARTED.md  GITHUB_RELEASE_PREP.md  SCREENSHOTS.md  TRUST_MODEL_AND_TROUBLESHOOTING.md  USAGE.md  USER_GUIDE.md
examples/: README.md
examples/ncs/: README.md  scenario-example.json
lab/: __init__.py  app.py  chrome_manager.py  config_store.py  defaults.py  paths.py  run_history.py  scenario_runner.py
lab/automation/: __init__.py  engine.py
lab/projects/: base_adapter.py  ncs_adapter.py  registry.py
tests/: test_lab_foundation.py  test_lab_hardening.py
